Working TCP link config

--- a/test/hardware/config/link_config_u250_tcp.ini
+++ b/test/hardware/config/link_config_u250_tcp.ini
@@ -23,7 +23,7 @@ nk=hostctrl:2:hostctrl_0_0.hostctrl_0_1
 nk=cmac_krnl:1:cmac_krnl_0
 nk=reduce_ops:1:arith_0
 nk=hp_compression:3:compression_0_0.compression_0_1.compression_0_2
-nk=loopback:1:lb_user_krnl
+nk=loopback:3:lb_user_krnl.lb_udp_txrx.lb_udp_meta
 
 # Kernels Foorplaning
 slr=compression_0_0:SLR1
@@ -36,6 +36,8 @@ slr=hostctrl_0_0:SLR1
 slr=hostctrl_0_1:SLR1
 slr=arb_0:SLR1
 slr=network_krnl_0:SLR3
+slr=lb_udp_txrx:SLR3
+slr=lb_udp_meta:SLR3
 slr=cmac_krnl_0:SLR2
 
 sp=network_krnl_0.m00_axi:DDR[3]
@@ -64,6 +66,10 @@ stream_connect=ccl_offload_0.m_axis_eth_close_connection:network_krnl_0.s_axis_t
 stream_connect=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg:512
 stream_connect=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta:512
 stream_connect=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data:512
+stream_connect=network_krnl_0.m_axis_udp_rx:lb_udp_txrx.in
+stream_connect=lb_udp_txrx.out:network_krnl_0.s_axis_udp_tx
+stream_connect=network_krnl_0.m_axis_udp_rx_meta:lb_udp_meta.in
+stream_connect=lb_udp_meta.out:network_krnl_0.s_axis_udp_tx_meta
 
 # Connect Network Kernel to CMAC Kernel
 stream_connect=cmac_krnl_0.axis_net_rx:network_krnl_0.axis_net_rx
