--- a/test/hardware/Makefile
+++ b/test/hardware/Makefile
@@ -158,8 +158,7 @@ $(TCP_XO): tcp_stack_ips
 .PHONY: tcp_stack_ips
 tcp_stack_ips:
 	git submodule update --init --recursive Vitis_with_100Gbps_TCP-IP
-	rm -rf Vitis_with_100Gbps_TCP-IP/build
-	mkdir Vitis_with_100Gbps_TCP-IP/build
+	mkdir -p Vitis_with_100Gbps_TCP-IP/build
 	cmake -S Vitis_with_100Gbps_TCP-IP/ -BVitis_with_100Gbps_TCP-IP/build/ -DFDEV_NAME=$(BOARD) -DVIVADO_HLS_ROOT_DIR=$(TCP_HLS_ROOTDIR) -DVIVADO_ROOT_DIR=$(TCP_VIVADO_ROOTDIR) -DTCP_STACK_EN=1 -DTCP_STACK_RX_DDR_BYPASS_EN=1 -DTCP_STACK_WINDOW_SCALING=0 
 	$(MAKE) -C Vitis_with_100Gbps_TCP-IP/build installip
 
