--- a/test/host/hls/CMakeLists.txt
+++ b/test/host/hls/CMakeLists.txt
@@ -35,6 +35,7 @@ endif()
 set(ACCL_REPO_ROOT ${CMAKE_CURRENT_LIST_DIR}/../../../)
 set(HLSLIB_INCLUDE ${ACCL_REPO_ROOT}/hlslib/include/hlslib/xilinx/)
 set(ACCL_HLSDRV_DIR ${ACCL_REPO_ROOT}/driver/hls/)
+set(VADD_DIR ${ACCL_REPO_ROOT}/kernels/plugins/vadd_put/)
 set(EMU_INCLUDES ${HLSLIB_INCLUDE} $ENV{XILINX_HLS}/include/ ${ACCL_HLSDRV_DIR})
 
 set(CMAKE_BUILD_TYPE Debug)
@@ -44,7 +45,7 @@ set(ACCL_DEBUG 1)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../driver/xrt "CMakeFiles/accl")
 
 find_package(MPI REQUIRED)
-add_executable(test test.cpp ${ACCL_HLSDRV_DIR}/cclo_bfm.cpp)
-target_include_directories(test PUBLIC ${MPI_CXX_INCLUDE_PATH} ${ACCL_INCLUDE_PATH} ${EMU_INCLUDES})
+add_executable(test test.cpp ${ACCL_HLSDRV_DIR}/cclo_bfm.cpp ${VADD_DIR}/vadd_put.cpp)
+target_include_directories(test PUBLIC ${MPI_CXX_INCLUDE_PATH} ${ACCL_INCLUDE_PATH} ${EMU_INCLUDES} ${VADD_DIR})
 target_link_libraries(test PUBLIC MPI::MPI_CXX accl zmq zmqpp pthread)
 target_compile_options(test PRIVATE -w -fdiagnostics-color=always -g)
