Add sphinx configuration for ACCL repo

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,5 +1,5 @@
 # /*******************************************************************************
-#  Copyright (C) 2021 Xilinx, Inc
+#  Copyright (C) 2022 Advanced Micro Devices, Inc
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -15,17 +15,4 @@
 #
 # *******************************************************************************/
 
-*.xclbin
-CMakeCache.txt
-CMakeDoxyfile.in
-CMakeDoxygenDefaults.cmake
-CMakeFiles/
-Makefile
-cmake_install.cmake
-doxygen.log
-bin
-docs/html
-docs/latex
-docs/xml
-docs/sphinx
-lib
+sphinx
