--- a/test/hardware/Makefile
+++ b/test/hardware/Makefile
@@ -52,6 +52,7 @@ CLIENT_ARB_XO=../../kernels/plugins/client_arbiter/client_arbiter.xo
 SUM_XO=../../kernels/plugins/reduce_ops/reduce_ops.xo
 COMPRESSION_XO=../../kernels/plugins/hp_compression/hp_compression.xo
 LOOPBACK_XO=../../kernels/plugins/loopback/loopback.xo
+VADD_XO=../../kernels/plugins/vadd_put/vadd_put.xo
 
 ARITHMETIC_XO = $(SUM_XO) $(COMPRESSION_XO)
 
@@ -110,6 +111,14 @@ else ifeq (axis3x,$(MODE))
 	ETH_IF := none
 	NET_XO = $(TCP_DUMMY_XO)
 	OTHER_XO = $(LOOPBACK_XO)
+	CONFIG += --advanced.param compiler.userPostSysLinkOverlayTcl=$(shell pwd)/tcl/post_sys_link_tri.tcl
+	CCLO_STACK_TYPE = TCP
+	CCLO_EN_FANIN = 1
+	CCLO_MB_DEBUG_LEVEL = 2
+else ifeq (axis3x_vadd,$(MODE))
+	ETH_IF := none
+	NET_XO = $(TCP_DUMMY_XO)
+	OTHER_XO = $(VADD_XO)
 	CONFIG += --advanced.param compiler.userPostSysLinkOverlayTcl=$(shell pwd)/tcl/post_sys_link_tri.tcl
 	CCLO_STACK_TYPE = TCP
 	CCLO_EN_FANIN = 1
