--- a/test/hardware/Makefile
+++ b/test/hardware/Makefile
@@ -25,11 +25,11 @@ XSA := $(strip $(patsubst %.xpfm, % , $(shell basename $(PLATFORM))))
 DEBUG ?= none
 PROFILE ?= none
 MODE ?= tcp
-FREQUENCY = 200
+FREQUENCY = 250
 CCLO_XO = ../../kernels/cclo/ccl_offload.xo
 CCLO_MB_DEBUG_LEVEL ?= 0
 
-VNX=xup_vitis_network_example
+VNX = xup_vitis_network_example
 NETLAYERDIR = $(VNX)/NetLayers
 CMACDIR     = $(VNX)/Ethernet
 NETLAYERHLS = $(NETLAYERDIR)/100G-fpga-network-stack-core
@@ -45,8 +45,6 @@ TCP_XO=Vitis_with_100Gbps_TCP-IP/_x.hw.$(XSA)/network_krnl.xo
 TCP_VIVADO_ROOTDIR ?= $$XILINX_VIVADO
 TCP_HLS_ROOTDIR ?= $$XILINX_HLS
 CMAC_TCP_XO=Vitis_with_100Gbps_TCP-IP/_x.hw.$(XSA)/cmac_krnl.xo
-HW_BENCH_XO=../../kernels/plugins/hw_bench/hw_bench.xo
-COLLECTOR_XO=../../kernels/plugins/collector/collector.xo
 XCLBIN=$(BUILD_DIR)/ccl_offload.xclbin
 
 HOSTCTRL_XO=../../kernels/plugins/hostctrl/hostctrl.xo
@@ -133,22 +131,6 @@ else ifeq (tcp, $(MODE))
 	CONFIG += --user_ip_repo_paths Vitis_with_100Gbps_TCP-IP/build/fpga-network-stack/iprepo
 	CCLO_STACK_TYPE = TCP
 	CCLO_EN_FANIN = 1
-else ifeq (tcp_vadd_bench, $(MODE))
-	CMAC_TCP_XO=Vitis_with_100Gbps_TCP-IP/_x.hw.$(XSA)/cmac_krnl.xo
-	NET_XO = $(TCP_XO) $(CMAC_TCP_XO)
-	OTHER_XO = $(LOOPBACK_XO) $(VADD_XO) $(COLLECTOR_XO) $(HW_BENCH_XO)
-	CONFIG += --advanced.param compiler.userPostSysLinkOverlayTcl=$(shell pwd)/Vitis_with_100Gbps_TCP-IP/scripts/post_sys_link.tcl
-	CONFIG += --user_ip_repo_paths Vitis_with_100Gbps_TCP-IP/build/fpga-network-stack/iprepo
-	CCLO_STACK_TYPE = TCP
-	CCLO_EN_FANIN = 1
-else ifeq (tcp_vadd, $(MODE))
-	CMAC_TCP_XO=Vitis_with_100Gbps_TCP-IP/_x.hw.$(XSA)/cmac_krnl.xo
-	NET_XO = $(TCP_XO) $(CMAC_TCP_XO)
-	OTHER_XO = $(LOOPBACK_XO) $(VADD_XO)
-	CONFIG += --advanced.param compiler.userPostSysLinkOverlayTcl=$(shell pwd)/Vitis_with_100Gbps_TCP-IP/scripts/post_sys_link.tcl
-	CONFIG += --user_ip_repo_paths Vitis_with_100Gbps_TCP-IP/build/fpga-network-stack/iprepo
-	CCLO_STACK_TYPE = TCP
-	CCLO_EN_FANIN = 1
 else
 	$(error Unsupported MODE)
 endif
@@ -160,8 +142,8 @@ all: $(XCLBIN)
 .PHONY: vnx
 vnx: $(CMAC_UDP_XO) $(UDP_XO)
 
-$(CMAC_UDP_XO) &:	
-	git submodule update --init --recursive xup_vitis_network_example	
+$(CMAC_UDP_XO) &:
+	git submodule update --init --recursive xup_vitis_network_example
 	$(MAKE) -C xup_vitis_network_example/Ethernet DEVICE=$(PLATFORM) INTERFACE=$(ETH_IF) all
 
 $(UDP_XO):
@@ -183,11 +165,11 @@ $(TCP_XO): tcp_stack_ips
 	$(MAKE) -C Vitis_with_100Gbps_TCP-IP/ network_krnl DEVICE=$(PLATFORM) TEMP_DIR=_x.hw.$(XSA)/ XSA=$(XSA)
 
 .PHONY: tcp_stack_ips
-# tcp_stack_ips:
-# 	# git submodule update --init --recursive Vitis_with_100Gbps_TCP-IP
-# 	# mkdir -p Vitis_with_100Gbps_TCP-IP/build
-# 	# cmake -S Vitis_with_100Gbps_TCP-IP/ -BVitis_with_100Gbps_TCP-IP/build/ -DFDEV_NAME=$(BOARD) -DVIVADO_HLS_ROOT_DIR=$(TCP_HLS_ROOTDIR) -DVIVADO_ROOT_DIR=$(TCP_VIVADO_ROOTDIR) -DTCP_STACK_EN=1 -DTCP_STACK_RX_DDR_BYPASS_EN=1 -DTCP_STACK_WINDOW_SCALING=0 
-# 	# $(MAKE) -C Vitis_with_100Gbps_TCP-IP/build installip
+tcp_stack_ips:
+	git submodule update --init --recursive Vitis_with_100Gbps_TCP-IP
+	mkdir -p Vitis_with_100Gbps_TCP-IP/build
+	cmake -S Vitis_with_100Gbps_TCP-IP/ -BVitis_with_100Gbps_TCP-IP/build/ -DFDEV_NAME=$(BOARD) -DVIVADO_HLS_ROOT_DIR=$(TCP_HLS_ROOTDIR) -DVIVADO_ROOT_DIR=$(TCP_VIVADO_ROOTDIR) -DTCP_STACK_EN=1 -DTCP_STACK_RX_DDR_BYPASS_EN=1 -DTCP_STACK_WINDOW_SCALING=0
+	$(MAKE) -C Vitis_with_100Gbps_TCP-IP/build installip
 
 $(XCLBIN): $(NET_XO) $(CONFIGFILE)
 	$(MAKE) -C ../../kernels/cclo PLATFORM=$(PLATFORM) STACK_TYPE=$(CCLO_STACK_TYPE) EN_FANIN=$(CCLO_EN_FANIN) MB_DEBUG_LEVEL=$(CCLO_MB_DEBUG_LEVEL)
