--- a/kernels/cclo/hls/.gitignore
+++ b/kernels/cclo/hls/.gitignore
@@ -15,13 +15,4 @@
 #
 # *******************************************************************************/
 
-DEVICE=xcu250-figd2104-2L-e
-
-all:
-	$(MAKE) -C eth_intf DEVICE=$(DEVICE)
-	$(MAKE) -C rxbuf_offload DEVICE=$(DEVICE)
-	$(MAKE) -C dma_mover DEVICE=$(DEVICE)
-	$(MAKE) -C segmenter DEVICE=$(DEVICE)
-
-clean:
-	rm -rf dma_mover/build_* eth_intf/build_* rxbuf_offload/build_* segmenter/build_stream_segmenter
+build_*
