Add correct cmake file

--- a/test/host/xrt/CMakeLists.txt
+++ b/test/host/xrt/CMakeLists.txt
@@ -38,8 +38,9 @@ set(ACCL_DEBUG 1)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../driver/xrt "CMakeFiles/accl")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../hardware/xup_vitis_network_example/xrt_host_api "CMakeFiles/xrt_host_api")
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../driver/utils/network_roce_v2 "CMakeFiles/network_roce_v2")
 
 find_package(MPI REQUIRED)
 add_executable(test test.cpp)
-target_include_directories(test PUBLIC ${MPI_CXX_INCLUDE_PATH} ${ACCL_INCLUDE_PATH} ${VNX_INCLUDE_PATH})
-target_link_libraries(test PUBLIC MPI::MPI_CXX accl vnx)
+target_include_directories(test PUBLIC ${MPI_CXX_INCLUDE_PATH})
+target_link_libraries(test PUBLIC MPI::MPI_CXX accl vnx network_roce_v2)
