--- a/kernels/cclo/Makefile
+++ b/kernels/cclo/Makefile
@@ -69,7 +69,7 @@ else ifeq ($(OPTIMIZATION),s)
    OPTIMIZATION_STRING = "Optimize for size (-Os)"
 endif
 
-.PHONY: elf simdll xo distclean dcp
+.PHONY: elf simdll xo clean dcp
 
 elf: $(CCLO_ELF)
 
@@ -93,11 +93,12 @@ $(CCLO_DCP): tcl/generate_dcp.tcl $(CCLO_ELF)
 xo: $(CCLO_XO)
 
 ccl_offload.xml:
-	python gen_xml.py $(STACK_TYPE) $(EN_DMA) $(EN_ARITH) $(EN_COMPRESS) $(EN_EXT_KRNL) 
+	python3 gen_xml.py $(STACK_TYPE) $(EN_DMA) $(EN_ARITH) $(EN_COMPRESS) $(EN_EXT_KRNL)
 
 $(CCLO_XO): tcl/generate_xo.tcl ccl_offload.xml $(CCLO_DCP)
 	rm -rf ccl_offload_ex/ccl_offload
 	vivado -mode batch -source $< -tclargs $(STACK_TYPE) $(EN_DMA) $(EN_ARITH) $(EN_COMPRESS) $(EN_EXT_KRNL) $(MB_DEBUG_LEVEL)
 
-distclean:
-	git clean -xfd
+clean:
+	$(MAKE) -C hls/ clean
+	rm -rf ccl_offload_ex ccl_offload.xml ccl_offload.xo vitis_ws .Xil *.jou *.log
