Add ACCL network utils

--- a/test/host/hls/CMakeLists.txt
+++ b/test/host/hls/CMakeLists.txt
@@ -43,11 +43,16 @@ set(CMAKE_BUILD_TYPE Debug)
 
 set(ACCL_DEBUG 1)
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../driver/xrt "CMakeFiles/accl")
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../model/bfm "CMakeFiles/cclobfm")
+set(ACCL_NETWORK_UTILS_MPI 1)
+set(ACCL_NETWORK_UTILS_DEBUG 1)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../../../driver/utils/accl_network_utils ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/accl_network_utils)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../model/bfm ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/cclobfm)
 
 find_package(MPI REQUIRED)
 add_executable(test test.cpp ${CCLO_BFM_DIR}/cclo_bfm.cpp ${VADD_DIR}/vadd_put.cpp)
 target_include_directories(test PUBLIC ${MPI_CXX_INCLUDE_PATH} ${ACCL_INCLUDE_PATH} ${EMU_INCLUDES} ${VADD_DIR})
-target_link_libraries(test PUBLIC MPI::MPI_CXX accl zmq zmqpp pthread cclobfm)
+target_link_libraries(test PUBLIC MPI::MPI_CXX zmq zmqpp pthread cclobfm accl_network_utils)
+# Explicitely link against vnx because CMake doesn't support nested object libraries
+# https://stackoverflow.com/a/71040950
+target_link_libraries(test PUBLIC vnx)
 target_compile_options(test PRIVATE -w -fdiagnostics-color=always -g)
