--- a/test/host/benchmark/.gitignore
+++ b/test/host/benchmark/.gitignore
@@ -1,3 +1,4 @@
+__pycache__
 CMakeCache.txt
 CMakeDoxyfile.in
 CMakeDoxygenDefaults.cmake
@@ -8,3 +9,6 @@ doxygen.log
 bin
 docs
 lib
+
+# results
+results*.json
