AlveoLink as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,4 +26,4 @@
 	url = https://github.com/quetric/hlslib.git
 [submodule "test/hardware/HiveNet"]
 	path = test/hardware/HiveNet
-	url = git@github.com:quetric/HiveNet.git
+	url = https://github.com/Xilinx/AlveoLink.git
