--- a/test/host/xrt/CMakeLists.txt
+++ b/test/host/xrt/CMakeLists.txt
@@ -51,7 +51,10 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../../../driver/utils/accl_network_ut
 
 find_package(MPI REQUIRED)
 add_executable(test test.cpp)
+add_executable(stress stress.cpp)
 target_include_directories(test PUBLIC ${MPI_CXX_INCLUDE_PATH})
+target_include_directories(stress PUBLIC ${MPI_CXX_INCLUDE_PATH})
 # Explicitely link against vnx and network_roce_v2 because CMake doesn't support nested object libraries
 # https://stackoverflow.com/a/71040950
 target_link_libraries(test PUBLIC MPI::MPI_CXX accl_network_utils vnx network_roce_v2 GTest::gtest_main)
+target_link_libraries(stress PUBLIC MPI::MPI_CXX accl_network_utils vnx network_roce_v2 GTest::gtest_main)
