--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,6 @@
 [submodule "test/hardware/HiveNet"]
 	path = test/hardware/HiveNet
 	url = https://github.com/quetric/AlveoLink.git
+[submodule "test/model/emulator/hls_sim_headers"]
+	path = test/model/emulator/hls_sim_headers
+	url = https://github.com/quetric/hls_sim_headers.git
