Adding call probe for debugging/benchmarking

--- a/test/hardware/config/link_config_u55c_tcp.ini
+++ b/test/hardware/config/link_config_u55c_tcp.ini
@@ -19,6 +19,7 @@
 nk=network_krnl:1:network_krnl_0
 nk=ccl_offload:1:ccl_offload_0
 nk=client_arbiter:1:arb_0
+nk=call_probe:1:probe_0
 nk=hostctrl:2:hostctrl_0_0.hostctrl_0_1
 nk=cmac_krnl:1:cmac_krnl_0
 nk=reduce_ops:1:arith_0
@@ -35,6 +36,7 @@ slr=ccl_offload_0:SLR0
 slr=hostctrl_0_0:SLR0
 slr=hostctrl_0_1:SLR0
 slr=arb_0:SLR0
+slr=probe_0:SLR0
 slr=network_krnl_0:SLR1
 slr=lb_udp_txrx:SLR1
 slr=lb_udp_meta:SLR1
@@ -44,12 +46,15 @@ sp=network_krnl_0.m00_axi:HBM[6]
 sp=network_krnl_0.m01_axi:HBM[6]
 sp=ccl_offload_0.m_axi_0:HBM[0:5]
 sp=ccl_offload_0.m_axi_1:HBM[0:5]
+sp=probe_0.m_axi_mem:HBM[0]
 
 # Connect host controllers to arbiter to CCL Offload
 stream_connect=hostctrl_0_0.cmd:arb_0.cmd_clients_0
 stream_connect=hostctrl_0_1.cmd:arb_0.cmd_clients_1
-stream_connect=arb_0.cmd_cclo:ccl_offload_0.s_axis_call_req
-stream_connect=ccl_offload_0.m_axis_call_ack:arb_0.ack_cclo
+stream_connect=arb_0.cmd_cclo:probe_0.cmd_upstream
+stream_connect=probe_0.ack_upstream:arb_0.ack_cclo
+stream_connect=probe_0.cmd_downstream:ccl_offload_0.s_axis_call_req
+stream_connect=ccl_offload_0.m_axis_call_ack:probe_0.ack_downstream
 stream_connect=arb_0.ack_clients_0:hostctrl_0_0.sts
 stream_connect=arb_0.ack_clients_1:hostctrl_0_1.sts
 
