--- a/test/hardware/config/link_config_u55c_axis3x.ini
+++ b/test/hardware/config/link_config_u55c_axis3x.ini
@@ -24,6 +24,7 @@ nk=network_krnl:3:network_krnl_0.network_krnl_1.network_krnl_2
 nk=reduce_ops:3:arith_0.arith_1.arith_2
 nk=hp_compression:9:compression_0_0.compression_0_1.compression_0_2.compression_1_0.compression_1_1.compression_1_2.compression_2_0.compression_2_1.compression_2_2
 nk=loopback:3:lb_user_krnl_0.lb_user_krnl_1.lb_user_krnl_2
+nk=call_probe:1:probe_0
 
 # Kernels Foorplaning
 slr=ccl_offload_0:SLR0
@@ -36,9 +37,11 @@ slr=compression_0_1:SLR0
 slr=compression_0_2:SLR0
 slr=arith_0:SLR0
 slr=lb_user_krnl_0:SLR0
+slr=probe_0:SLR0
 
 sp=ccl_offload_0.m_axi_0:HBM[0:5]
 sp=ccl_offload_0.m_axi_1:HBM[0:5]
+sp=probe_0.m_axi_mem:HBM[0]
 
 # Kernels Foorplaning
 slr=ccl_offload_1:SLR1
@@ -73,8 +76,10 @@ sp=ccl_offload_2.m_axi_1:HBM[12:17]
 # Connect host controllers to arbiter to CCL Offload
 stream_connect=hostctrl_0_0.cmd:arb_0.cmd_clients_0
 stream_connect=hostctrl_0_1.cmd:arb_0.cmd_clients_1
-stream_connect=arb_0.cmd_cclo:ccl_offload_0.s_axis_call_req
-stream_connect=ccl_offload_0.m_axis_call_ack:arb_0.ack_cclo
+stream_connect=arb_0.cmd_cclo:probe_0.cmd_upstream
+stream_connect=probe_0.ack_upstream:arb_0.ack_cclo
+stream_connect=probe_0.cmd_downstream:ccl_offload_0.s_axis_call_req
+stream_connect=ccl_offload_0.m_axis_call_ack:probe_0.ack_downstream
 stream_connect=arb_0.ack_clients_0:hostctrl_0_0.sts
 stream_connect=arb_0.ack_clients_1:hostctrl_0_1.sts
 
@@ -184,3 +189,16 @@ stream_connect=lb_user_krnl_1.out:ccl_offload_1.s_axis_krnl
 
 stream_connect=ccl_offload_2.m_axis_krnl:lb_user_krnl_2.in
 stream_connect=lb_user_krnl_2.out:ccl_offload_2.s_axis_krnl
+
+[debug]
+chipscope=probe_0:M_AXI_MEM
+chipscope=probe_0:CMD_UPSTREAM
+chipscope=probe_0:ACK_UPSTREAM
+chipscope=probe_0:CMD_DOWNSTREAM
+chipscope=probe_0:ACK_DOWNSTREAM
+chipscope=probe_0:S_AXI_CONTROL
+
+
+
+
+
