--- a/test/hardware/config/link_config_u55c_axis3x_vadd.ini
+++ b/test/hardware/config/link_config_u55c_axis3x_vadd.ini
@@ -41,6 +41,7 @@ slr=probe_0:SLR0
 sp=ccl_offload_0.m_axi_0:HBM[0:5]
 sp=ccl_offload_0.m_axi_1:HBM[0:5]
 sp=vadd_0_0.m_axi_gmem:HBM[18]
+sp=probe_0.m_axi_mem:HBM[18]
 
 # Kernels Foorplaning
 slr=ccl_offload_1:SLR1
